# takeout-fixer

./: package-lock.json  package.json  svelte.config.js  vite.config.js
.github/workflows/: publish.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: engine.rs  lib.rs
src/lib/components/: Hero3D.svelte
src/routes/: +layout.ts  +page.svelte
src/routes/fix/: +page.svelte
